--- a/sass/high-contrast-theme.scss
+++ b/sass/high-contrast-theme.scss
@@ -382,6 +382,10 @@ $header-tab-alt-normal-color: $graphite10;
 $header-tab-alt-hover-color: $font-color-highcontrast;
 $header-tab-alt-selected-color: $primary-color;
 
+//Swaplist
+$swaplist-border-color-hover: $white;
+
+
 //================================================== //
 // Core Controls
 @import 'controls';
@@ -400,4 +404,12 @@ $header-tab-alt-selected-color: $primary-color;
     outline-offset: 1px;
   }
 }
+
+//Swaplist
+.swaplist {
+  .audible {
+    background-color: $graphite07;
+  }
+}
+
 
